tests/checker/ok/dispatch_arm_bound_var_specific_type.can
Described = Unit

Extracted = String

JsonEntry = String

JsonMissing = String

JsonObject = JsonEntry

JsonValue = JsonMissing + JsonObject

JsonValue => Described {
    JsonValue -> (
        * JsonMissing => Described { "missing" -> Print }
        * JsonObject => Described { JsonObject -> Extracted -> Print }
    )
}

JsonObject => Extracted {
    "extracted"
}

Unit => Program {
    JsonEntry("payload")
        -> JsonObject
        -> Described
    "ok" -> Print
}
