tests/checker/fail/unknown_constructor_type.can
Unit => Program {
    Mystery("hi").print()
}
